--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -138,6 +138,7 @@ text-align-last: center;
                           <h4 class="card-title"><%= historyItem.name_company %></h4>
                           <h5 class="card-title"><%= historyItem.name_job %></h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <b><%= historyItem.statusjob %></b>
                           <a href="/company/jobbyidjob/<%= historyItem.idjob_company %>"
                             class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
                         </div>
