--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -230,6 +230,33 @@
                       </div>
                     </div>
                     <hr>
+                    
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Certificate Multiple files</p>
+                      </div>
+<!--                      
+                    <input type="file" id="fileInput">
+                    <ul id="fileList"></ul> -->
+                
+                    <!-- <script>
+                        const fileInput = document.getElementById('fileInput');
+                        const fileList = document.getElementById('fileList');
+                
+                        fileInput.addEventListener('change', function() {
+                            const file = fileInput.files[0];
+                            if (file) {
+                                const listItem = document.createElement('li');
+                                listItem.textContent = file.name;
+                                fileList.appendChild(listItem);
+                            }
+                            fileInput.value = ''; // รีเซ็ต input ให้ว่าง
+                        });
+                    </script> -->
+                    
+                    </div>
+                    <hr>
+
                     <button type="submit" class="btn btn-outline-primary"  style="margin-left: 70vh;" data-mdb-ripple-color="dark">Submit</button>
                   </div>
                 </div>
@@ -250,6 +277,7 @@
             });
 
           </script>
+        
 </body>
 
 </html>
