addresume addfile genpdf

--- a/views/pdfemail.ejs
+++ b/views/pdfemail.ejs
@@ -44,7 +44,8 @@
   <div class="container">
     <div>
      <h4 class="first-name"><%= content[0].username %> </h4> 
-     
+     <img src="data:image/jpeg;base64,bAse64" alt="Alternative Text">
+
      
        </div>
       
