--- a/views/jobsended.ejs
+++ b/views/jobsended.ejs
@@ -110,10 +110,17 @@
                                         <h5 class="card-title">
                                             <%= historyItem.name_job %>
                                         </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                                            content.</p><b><%= historyItem.statusjob %></b>
-                                            <a href="/company/jobbyidjob/<%= historyItem.idjob_company %>"
-                                                class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
+                                        <p class="card-text"><%= historyItem.detail_work.substring(0, 100) %></p>
+                                            <b><%= historyItem.statusjob %></b>
+                                            <% if (historyItem.statusjob =='closejob') { %>
+
+                                                <%} else { %>
+
+
+                                                    <a href="/company/jobbyidjob/<%= historyItem.idjob_company %>"
+                                                        class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
+                                               <% } %>
+                                                
                                     </div>
                                 </div>
                             </div>
