--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -225,7 +225,7 @@
 
                     </div>
 
-                    <form action="/user/updateresume/<%= user.id_user %>" method="post">
+                    <form action="/user/updateresume/<%= user.id_user %>" method="post" enctype="multipart/form-data">
                       <div class="row" style="justify-content:center ;">
 
                         <div class="col-lg-6">
@@ -319,6 +319,7 @@
                                   </div>
                                   <div class="col-sm-7">
                                     <input type="file" name="files" id="fileInput" class="form-control" multiple>
+
                                     
                                     <script>
                                       // เมื่อมีการเลือกไฟล์ใน input
