--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -2,107 +2,140 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registerUser</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-        
-<style>
-  .button-unban{
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>registerUser</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-text-align: center;
-margin-top: -38px;
-padding-left: -15px;
-margin-left: -50px;
+  <style>
+    .button-unban {
 
-  }
-  .btn-rounded {
-    border-radius: 20px; /* Adjust the value to control the roundness of the button */
-}
-.a-edit{
-  margin-left: -15px;
-}
+      text-align: center;
+      margin-top: -38px;
+      padding-left: -15px;
+      margin-left: -50px;
+
+    }
+
+    .btn-rounded {
+      border-radius: 20px;
+      /* Adjust the value to control the roundness of the button */
+    }
+
+    .a-edit {
+      margin-left: -15px;
+    }
 
 
-  .button-ban{
-padding-right: -10px;
-margin-top: -38px;
+    .button-ban {
+      padding-right: -10px;
+      margin-top: -38px;
 
-text-align: right;
+      text-align: right;
 
-  }
-  .label-profile{
-  width: 117px;
-  padding-top: 7px;
-height: 35px;
-flex-shrink: 0;
-background: #49ebd8;
-text-align-last: center;
-}
-</style>
+    }
+
+    .label-profile {
+      width: 117px;
+      padding-top: 7px;
+      height: 35px;
+      flex-shrink: 0;
+      background: #49ebd8;
+      text-align-last: center;
+    }
+
+    .equal-height-cards {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .equal-height-cards .col-md-3 {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .equal-height-cards .card {
+      flex: 1;
+    }
+  </style>
 </head>
 
 
-    <body>
-      
-      <%- include('navbar') %>
-      <section style="background-color: #eeeeee; height: 100vh; ">
+<body>
+
+  <%- include('navbar') %>
+    <section style="background-color: #eeeeee; height: 100vh; ">
       <div class="container py-5 h-100">
         <p class="label-profile"><b>MyJob</b></p>
-      <div class="container">
-        <div class="row">
-      <% if(job.length > 0) { %>
-        <% job.forEach((job) => {%>
-          <% if( job != undefined) { %>
-                <div class="col-md-3">
-                  <div class="card" style="width: 18rem; margin-top: 30px">
-                   
-                    <div class="card-body">
-                      
-                      <h5 class="card-title"><%= job.name_job %></h5>
-                      <p class="card-title"><%= job.detail_work.substring(0, 100) %></p>
+        <div class="container">
+          <div class="row equal-height-cards">
+            <% if(job.length> 0) { %>
+              <% job.forEach((job)=> {%>
+                <% if( job !=undefined) { %>
+                  <div class="col-md-3">
+                    <div class="card" style="width: 18rem; margin-top: 30px">
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          <%= job.name_job %>
+                        </h5>
+                        <p class="card-title">
+                          <%= job.detail_work.substring(0, 100) %>
+                        </p>                                              
+                      </div>                      
+                      <div class="p-3">                          
+                        <button disabled class="mb-2 <%= job.statusjob === 'openjob' ? 'btn-success btn' : 'btn-danger btn' %>">
+                          <%= job.statusjob %>
+                          <small  class="card-title ms-5">
+                            <b><%= job.deadline_offer %></b>
+                          </small>
+                        </button>
+                        
+                        
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        <a class="nav-link a-edit " href="/company/updatejob_company/<%= job.idjob_company %>"> <i
+                            class="far fa-edit ">edit</i></a>
+                        <div class="button-ban">
+                          <form action="/company/closejob/<%= job.idjob_company %>" method="post">
+                            <input type="hidden" name="id" value="<%= job.idjob_company %>">
+                            <button type="submit" class="btn btn-outline-danger btn-rounded" name="action"
+                              value="closejob">Close Job</button>
 
-                      <p class="card-title"><%= job.deadline_offer %></p><b><%= job.statusjob %></b>
-                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a  class="nav-link a-edit " href="/company/updatejob_company/<%= job.idjob_company %>"> <i class="far fa-edit ">edit</i></a>
-                     <div class="button-ban">
-                      <form action="/company/closejob/<%= job.idjob_company %>" method="post">
-                        <input type="hidden" name="id" value="<%= job.idjob_company %>">
-                        <button type="submit" class="btn btn-outline-primary btn-rounded" name="action" value="closejob">Close Job</button>
+                          </form>
+                        </div>
+                        <div class="button-unban">
+                          <form action="/company/openjob/<%= job.idjob_company %>" method="post">
+                            <input type="hidden" name="id" value="<%= job.idjob_company %>">
+                            <button type="submit" class="btn btn-outline-success btn-rounded"
+                              data-mdb-ripple-color="dark" name="action" value="openjob">Open Job</button>
+                          </form>
+                        </div>
+                      </div>
 
-                      </form>
                     </div>
-                      <div class="button-unban">
-                      <form action="/company/openjob/<%= job.idjob_company %>" method="post">
-                        <input type="hidden" name="id" value="<%= job.idjob_company %>">
-                        <button type="submit" class="btn btn-outline-primary btn-rounded" data-mdb-ripple-color="dark" name="action" value="openjob">Open Job</button>
-                      </form>
-                     </div>
-                    </div>
+                    
                   </div>
-                </div>
-              
-          <% } else { %>
-            <p> something wrong</p>
-           <% } %>
-      
-        <% }) %>
-      <% } else { %> 
-          <p> no data</p>
-          <% } %>
-       
-    
-  
-        </section>   
-                
 
-    </body>
-    
+                  <% } else { %>
+                    <p> something wrong</p>
+                    <% } %>
+
+                      <% }) %>
+                        <% } else { %>
+                          <p> no data</p>
+                          <% } %>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+</body>
+
 
 
 </html>
