--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>หน้าหลัก</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <style>
   .card{
@@ -76,11 +76,11 @@
                         <p class="card-text">
                           <%= jobindex.detail_work.substring(0, 500) %>
                         </p>
-                        <small class="card-text" style="color: #0800ff;">
+                        <small class="card-text" style="color: #ba0000;">
                           <b>หมดเขต : <%= jobindex.deadline_offer %></b>
                         </small><br>
                         <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>"
-                          class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
+                          class="btn fixed-button" style="background: #ED2A30;"><b>Job Description</b></a>
                         <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">applyjob</a> -->
                       </div>
                     </div>
