--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,6 +2,9 @@
 <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Kanit:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
 <style>
   .content-with-space {
@@ -64,7 +67,7 @@
 }
 
 .header-social-links a:hover {
-  color: #34b7a7;
+  color: #FF3131;
 }
 
 .navbar {
@@ -89,7 +92,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: 600;
   color: #888888;
@@ -112,7 +114,7 @@
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color: #34b7a7;
+  background-color: #FF3131;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -167,7 +169,7 @@
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #34b7a7;
+  color: #FF3131;
 }
 
 .navbar .dropdown:hover>ul {
@@ -267,7 +269,7 @@
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #34b7a7;
+  color: #FF3131;
 }
 
 .navbar-mobile .getstarted,
@@ -302,12 +304,38 @@
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #34b7a7;
+  color: #FF3131;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
   display: block;
 }
+
+.company-name {
+    display: none;
+    position: absolute;
+    background-color: white;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.company-profile {
+    position: relative;
+}
+
+.company-profile:hover .company-name {
+    display: block;
+}
+
+.company-profile img {
+    transition: box-shadow 0.3s ease-in-out; 
+}
+
+.company-profile:hover img {
+    box-shadow: 0 0 10px #ED2A30; 
+}
+
 
 a{
   text-decoration: none;
@@ -324,48 +352,53 @@ a{
         }
       });
     });
+
+    document.querySelectorAll('.company-name').forEach(function(element) {
+        element.style.display = 'none';
+    });
+
   </script>
 <% if (status==="loggedIn" ) { %>
   <% if (user && user.status === "active") { %>
-    <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
-    
+    <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131;">
       <a class="navbar-brand" href="/">
-       
-        <h6 class="text-dark m-0 fs-2">
-          
-          <i class="fa fa-briefcase fa-1x "><%= webpage[0].namepage %></i>
-        </h6>
-      </a>
+        <div style="display: flex; flex-direction: column; align-items: center; color: #FF3131;">
+            <img src="/image/FINDJOB-Photoroom.png-Photoroom (1).png" alt="Brand Image" style="width: 50px; height: 32px;"/>
+            <b style="letter-spacing: 2px; font-size: 14px;"><%= webpage[0].namepage %></b>
+        </div>
+    </a>
 
   
 
   <nav id="navbar" class="navbar order-last order-lg-0">
     <ul>
-      <li><a href="/">HOME</a></li>
-      <li><a href="/user/addresume/<%= user.id_user %>">RESUME</a></li>
-      <li><a href="/user/jobsended/<%= user.id_user %>">JOB SENDED</a></li>
+      <li><a href="/">หน้าหลัก</a></li>
+      <li><a href="/user/addresume/<%= user.id_user %>">เรซูเม่</a></li>
+      <li><a href="/user/jobsended/<%= user.id_user %>">งานที่สมัครแล้ว</a></li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
   </nav>
 
-  <div class="header-social-links">
-    <img src="/image/<%= user.image %>" alt="Profile" class="rounded-circle">
-    
-    <a class="nav-link dropdown-toggle  btn btn-light py-2 px-3" href="#" id="navbarDropdownuser"
-    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    <%= user.username %></a>
-  <ul class="dropdown-menu" aria-labelledby="navbarDropdownuser">
-    <li><a class="dropdown-item" href="/user/profile/<%= user.id_user %>">Profile</a></li>
-    <li><a class="dropdown-item" href="/user/resetpassword/<%= user.id_user %>">ResetPassword</a></li>
-    <li><a class="dropdown-item" href="/logout">Logout</a></li>
-  </ul>
-    
+  <div class="row align-items-center">
+    <div class="button-container">
+      <div class="company-profile">
+        <a href="/user/profile/<%= user.id_user %>">
+            <img src="/image/<%= user.image %>" alt="Profile" class="rounded-circle img-icon">
+        </a>
+        <span class="company-name"><%= user.username %></span>
+    </div>        
+      <button class="btn" href="/user/resetpassword/<%= user.id_user %>">เปลี่ยนรหัสผ่าน</button>
+      <button class="btn-bold" href="/logout">ออกจากระบบ</button>
+  </div>      
+</div>
+</div>
   </div>
+</div>
 </div>
 
 <% } else if(user && user.status === "banned"){ %>
   
-<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699; height: 50px;">
+<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131; height: 50px;">
         
   <a class="navbar-brand" href="/">
    
@@ -402,22 +435,20 @@ a{
 
 <% } else if(company &&company.status ==="active"){ %>
 
-  <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
+  <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131;">
     
       <a class="navbar-brand" href="/">
-       
-        <h6 class="text-dark m-0 fs-2">
-          
-          <i class="fa fa-briefcase fa-1x "><%= webpage[0].namepage %></i>
-        </h6>
-      </a>
-    
-    
+        <div style="display: flex; flex-direction: column; align-items: center; color: #FF3131;">
+            <img src="/image/FINDJOB-Photoroom.png-Photoroom (1).png" alt="Brand Image" style="width: 50px; height: 32px;"/>
+            <b style="letter-spacing: 2px; font-size: 14px;"><%= webpage[0].namepage %></b>
+        </div>
+    </a>
+
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a  href="/">Home</a></li>
-          <li><a href="/company/addjob_company/<%= company.id_company %>">AddJob</a></li>
-          <li><a href="/company/joball/<%= company.id_company %>">MyJob</a></li>
+          <li><a  href="/">หน้าหลัก</a></li>
+          <li><a href="/company/addjob_company/<%= company.id_company %>">เพิ่มงาน</a></li>
+          <li><a href="/company/joball/<%= company.id_company %>">งานของฉัน</a></li>
           <!-- <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
@@ -425,30 +456,24 @@ a{
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-      
-      
-      
     
       <div class="row align-items-center">
-          <div class="col-auto">
-            <img src="/image/<%= company.image %>" alt="Profile" class="rounded-circle float-start" style="width: 50px; height: 40px;">
-          </div>
-          <div class="col">
-        <a class="nav-link dropdown-toggle  btn btn-light py-2 px-3" href="#" id="navbarDropdowncompany"
-        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <%= company.username %></a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdowncompany">
-        <li><a class="dropdown-item" href="/company/profile/<%= company.id_company %>">Profile</a></li>
-        <li><a class="dropdown-item" href="/company/resetpassword/<%= company.id_company %>">ResetPassword</a></li>
-        <li><a class="dropdown-item" href="/logout">Logout</a></li>
-      </ul>
+        <div class="button-container">
+          <div class="company-profile">
+            <a href="/company/profile/<%= company.id_company %>">
+                <img src="/image/<%= company.image %>" alt="Profile" class="rounded-circle img-icon">
+            </a>
+            <span class="company-name"><%= company.username %></span>
+        </div>        
+          <button class="btn" href="/company/resetpassword/<%= company.id_company %>">เปลี่ยนรหัสผ่าน</button>
+          <button class="btn-bold" href="/logout">ออกจากระบบ</button>
+      </div>      
     </div>
   </div>
       </div>
     </div>
     <% } else if(company &&company.status ==="banned"){ %>
-      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
+      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131;">
         
         <a class="navbar-brand" href="/">
          
@@ -483,7 +508,7 @@ a{
       </div>
     <% } else if(admin){ %>
 
-      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
+      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131;">
         
           <a class="navbar-brand" href="/">
            
@@ -526,7 +551,7 @@ a{
 
       <% } %>
       <% } else { %>
-<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
+<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #FF3131;">
         
           <a class="navbar-brand" href="/">
            
