--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -13,77 +13,75 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
 
-  <style>.form-control-input {
- 
-    padding: 2px; /* Add some padding */
-    margin: 5px 0; /* Add margin at the top and bottom */
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
-    border: 1px solid #981818; /* Add a border */
-    border-radius: 4px; /* Add rounded corners */
-  }
-  .label-profile{
-  width: 117px;
-  padding-top: 7px;
-height: 35px;
-flex-shrink: 0;
-      background: #49ebd8;
-text-align-last: center;
-}
-</style>  
+  <style>
+    .outer-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+      height: 90vh;
+      background-color: rgb(255, 255, 255);
+    }
+
+    .inner-container {
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
   <%- include('navbar') %>
-  <% if(locals.errors){ %>
-    <% Object.values(errors).forEach(function(error){%>
-      <script type="text/javascript">
-        Swal.fire({
-          title: "<%= error.msg || errors  %>",
-          icon: 'warning',
-        })
-      </script>
-      <%})%>
-        <%} else if (locals.success) { %>
-          <script type="text/javascript">
-            Swal.fire({
-              title: "<%= success  %>",
-              icon: 'success',
-            })
-          </script>
-          <%}%>
+    <% if(locals.errors){ %>
+      <% Object.values(errors).forEach(function(error){%>
+        <script type="text/javascript">
+          Swal.fire({
+            title: "<%= error.msg || errors  %>",
+            icon: 'warning',
+          })
+        </script>
+        <%})%>
+          <%} else if (locals.success) { %>
+            <script type="text/javascript">
+              Swal.fire({
+                title: "<%= success  %>",
+                icon: 'success',
+              })
+            </script>
+            <%}%>
 
-  <% if(user) { %>
-    <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-    <div class="container py-5 h-100" >
-      <p class="label-profile"><b>Password</b></p>
-    
-          <div class="row" style="justify-content:center ;">
-            
-            <div class="col-lg-6">
-              <div class="card  p-5 " >
-              <div class="card">
-                <div class="card-body">
-                  <form action="/user/resetpassword/<%= user.email %>" method="post">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
-                    </div>
-                    <div class="col-sm-9">
-                      <input type="email" id="email" name="email" class="form-control-input" placeholder="Enter Email"required/>
+              <% if(user) { %>
+                <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+                  <div class="container py-5 h-100">
+                    <p class="label-profile"><b>Password</b></p>
+
+                    <div class="row" style="justify-content:center ;">
+
+                      <div class="col-lg-6">
+                        <div class="card  p-5 ">
+                          <div class="card">
+                            <div class="card-body">
+                              <form action="/user/resetpassword/<%= user.email %>" method="post">
+                                <div class="row">
+                                  <div class="col-sm-3">
+                                    <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
+                                  </div>
+                                  <div class="col-sm-9">
+                                    <input type="email" id="email" name="email" class="form-control-input"
+                                      placeholder="Enter Email" required />
+                                  </div>
+                                </div>
+                                <hr>
+                                <button type="submit" class="btn btn-primary">save</button>
+                              </form>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <hr>
-                  <button type="submit" class="btn btn-primary">save</button>
-                </form>
                 </div>
-              </div>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-        <!-- <form action="/user/resetpassword/<%= user.email %>" method="post">
+                <!-- <form action="/user/resetpassword/<%= user.email %>" method="post">
 
           <div class="inputbox-regis">
             <label for="email">email</label>
@@ -92,37 +90,19 @@ text-align-last: center;
           <button type="submit" class="btn btn-primary">save</button>
 
         </form> -->
-        <% } else if (company) { %>
-          <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-            <div class="container py-5 h-100" >
-              <p class="label-profile"><b>Password</b></p>
-
-                <div class="row" style="justify-content:center ;">
-                  
-                  <div class="col-lg-6">
-                    <div class="card  p-5 " >
-                    <div class="card">
-                      <div class="card-body">
-                        <form action="/company/resetpassword/<%= company.email %>" method="post">
-                        <div class="row">
-                          <div class="col-sm-3">
-                            <p class="mb-0"  style="margin-left: 4vh; margin-top: 1vh;">Email</p>
-                          </div>
-                          <div class="col-sm-9">
-                            <input type="email" id="email" name="email" placeholder="Enter Email"required/>
-                          </div>
-                        </div>
-                        <hr>
-                        <button type="submit" class="btn btn-primary">save</button>
+                <% } else if (company) { %>
+                  <div class="outer-container">
+                    <div class="inner-container">
+                      <p style="font-size: 20px;"><strong>เปลี่ยนรหัสผ่าน</strong></p>
+                      <span style="color: #817E7E;">เมื่อคุณกด 'บันทึก' ระบบจะทำการส่ง OTP ไปที่อีเมลคุณ</span>
+                      <form action="/company/resetpassword/<%= company.email %>" method="post">
+                        <input type="email" id="email" class="form-control mt-3" name="email" placeholder="กรอก Email"
+                          required />
                       </form>
-                      </div>
+                      <button type="submit" style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
                     </div>
                   </div>
-                  </div>
-                </div>
-             
-
-          <!-- <form action="/company/resetpassword/<%= company.email %>" method="post">
+                  <!-- <form action="/company/resetpassword/<%= company.email %>" method="post">
 
             <div class="inputbox-regis">
               <label for="email">email</label>
@@ -131,9 +111,9 @@ text-align-last: center;
             <button type="submit" class="btn btn-primary">save</button>
   
           </form> -->
-          <% }else { %>
+                  <% }else { %>
 
-            <% } %>
+                    <% } %>
 
 
 
