--- a/views/usermanagement.ejs
+++ b/views/usermanagement.ejs
@@ -14,7 +14,7 @@
     <!-- Add this line in the head of your HTML document to load jQuery from a CDN -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
