--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -6,18 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <style>
-      .label-profile{
-  width: 117px;
-  padding-top: 7px;
-height: 35px;
-flex-shrink: 0;
-background: #49ebd8;
-text-align-last: center;
-}
-  </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -26,13 +16,8 @@ text-align-last: center;
     <% if(user) { %>
         <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile"><b>Password</b></p>
-
-
-
-
-              <div class="row" style="justify-content:center ;">
-            
+              <p class="label-profile2"><b>Password</b></p>
+              <div class="row" style="justify-content:center ;">        
                 <div class="col-lg-6">
                   <div class="card  p-5 " >
                   <div class="card">
