--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -6,33 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registerUser</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <style>
-    h6 {
-      font-weight: 800;
-      font-family: "Raleway", sans-serif;
-    }
-
-    .label-profile {
-      width: 117px;
-      padding-top: 7px;
-      height: 35px;
-      flex-shrink: 0;
-      background: #49ebd8;
-      text-align-last: center;
-    }
-
-    .fixed-button {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -59,7 +35,7 @@
 
     <div class="container-fluid mb-5">
       <div class="pt-5 ps-5">
-        <h6 class="label-profile text-dark-50">Detail</h6>
+        <h6 class="label-profile3 text-dark-50">Detail</h6>
         </div>
         <div class="row" style="justify-content:center ;">
           <div class="col-3  p-4 border bg-light" style="margin-top:1vh ;">
@@ -93,11 +69,11 @@
                     <ion-icon name="mail-outline"></ion-icon>
                     <input type="hidden" id="idjob_company" name="idjob_company" value="<%= job.idjob_company %>" />
                   </div>
-                  <button type="submit" class="btn btn-success fixed-button" style=" width: 100%;"
+                  <button type="submit" class="btn btn-success fixed-button1" style=" width: 100%;"
                     data-mdb-ripple-color="dark"><b>Apply Job</b></button>
                 </form>
                 <script>
-                  document.querySelector('.fixed-button').addEventListener('click', function (event) {
+                  document.querySelector('.fixed-button1').addEventListener('click', function (event) {
                     event.preventDefault(); // Prevent the default form submission behavior
                     fetch('/user/apply/<%= user.id_user %>/<%= job.idjob_company %>', {
                       method: 'POST',
@@ -131,7 +107,7 @@
 
                       <% } else if(company || admin) { %>
                       <% } else { %>
-                          <button onclick="lessondelete()" type="button" class="btn btn-success fixed-button" style=" width: 100%;">
+                          <button onclick="lessondelete()" type="button" class="btn btn-success fixed-button1" style=" width: 100%;">
                             <b>Apply Job</b>
                           </button>
                         <% }%>
