--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -5,29 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
-  <style> .label-profile{
-    width: 117px;
-    padding-top: 7px;
-  height: 35px;
-  flex-shrink: 0;
-  background: #f6d365;
-  text-align-last: center;
-  }</style>
 </head>
 
 <body>
- 
-  
   <%- include('navbar') %>
   <div style="background-color: rgb(219, 218, 218); height: 100vh;">
     <div class="container py-5 h-100" >
-      <p class="label-profile"><b>Password</b></p>
+      <p class="label-profile4"><b>Password</b></p>
 
       <div class="row" style="justify-content:center ;">
             
@@ -66,11 +53,6 @@
 
 
         </form> -->
-
-
-
-
-
 </body>
 
 </html>
