--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -6,73 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>งานของฉัน</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
-
-  <style>
-    .button-unban {
-
-      text-align: center;
-      margin-top: -38px;
-      padding-left: -15px;
-      margin-left: -50px;
-
-    }
-
-    .btn-rounded {
-      border-radius: 20px;
-      /* Adjust the value to control the roundness of the button */
-    }
-
-    .a-edit {
-      margin-left: -15px;
-    }
-
-
-    .button-ban {
-      padding-right: -10px;
-      margin-top: -38px;
-
-      text-align: right;
-
-    }
-
-    .label-profile {
-      width: 117px;
-      padding-top: 7px;
-      height: 35px;
-      flex-shrink: 0;
-      background: #49ebd8;
-      text-align-last: center;
-    }
-
-    .equal-height-cards {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .equal-height-cards .col-md-3 {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .equal-height-cards .card {
-      flex: 1;
-    }
-  </style>
 </head>
-
-
 <body>
 
   <%- include('navbar') %>
     <section style="background-color: #eeeeee; height: 100vh; ">
       <div class="container py-5 h-100">
-        <p class="label-profile"><b>MyJob</b></p>
+        <p class="label-profile7"><b>MyJob</b></p>
         <div class="container">
           <div class="row equal-height-cards">
             <% if(job.length> 0) { %>
