--- a/views/jobsended.ejs
+++ b/views/jobsended.ejs
@@ -5,89 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <style>
-        .gradient-custom {
-            /* fallback for old browsers */
-            background: #f6d365;
-
-            /* Chrome 10-25, Safari 5.1-6 */
-            background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
-
-            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-            background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
-        }
-
-        .colorless-input {
-            background-color: transparent;
-            border: none;
-        }
-
-        .border-custom {
-            margin-top: 9px;
-            margin-bottom: 9px;
-            text-align-last: center;
-            padding-top: 2px;
-            padding-bottom: 2px;
-            border: 2px solid rgb(0, 0, 0);
-            /* Change the border style and color as needed */
-            border-radius: 5px;
-            /* Optional: Add rounded corners */
-        }
-
-        .label-profile {
-            width: 117px;
-            padding-top: 7px;
-            height: 35px;
-            flex-shrink: 0;
-            background: #f6d365;
-            text-align-last: center;
-        }
-
-        .input-mid {
-            padding-left: 35px;
-            margin-bottom: 10px;
-        }
-
-        .form-control-input {
-
-            padding: 10px;
-            /* Add some padding */
-            margin: 5px 0;
-            /* Add margin at the top and bottom */
-            box-sizing: border-box;
-            /* Include padding and border in the element's total width and height */
-            border: 1px solid #981818;
-            /* Add a border */
-            border-radius: 4px;
-            /* Add rounded corners */
-        }
-
-        /* Style for when the input is focused */
-        .form-control-input {
-            border-color: #007BFF;
-            /* Change border color when focused */
-        }
-        .card-img-top {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-    display: block;
-    margin: 0 auto;
-}
-    </style>
 </head>
 
 <body>
 
     <%- include('navbar') %>
     <div class="container">
-        <p class="label-profile mt-5"><b>Job sended</b></p>
+        <p class="label-profile9 mt-5"><b>Job sended</b></p>
         <div class="row">
         <% if (history=='undefined' || history==null || resume==='undefined' || resume===null) { %>
             <div style="justify-content: center;" class="d-flex">
