--- a/views/pdfemail.ejs
+++ b/views/pdfemail.ejs
@@ -4,37 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-  
+  <link rel="stylesheet" href="/css/style.css">
 <style> 
-.first-name{
-  margin-top:30px;
-  }
-  .pic{
-    margin-right:100px;
-
-  }
-.limited-text {
-    width: 350px; /* กำหนดความกว้างของ <td> */
-   
-    overflow: hidden; /* ซ่อนข้อความที่เกินขอบของ <td> */
-    text-overflow: ellipsis; /* แสดงเครื่องหมาย ... เมื่อข้อความเกินขอบ */
-  }
-  .limited-skill {
-    width: 250px; /* กำหนดความกว้างของ <td> */
-   
-    overflow: hidden; /* ซ่อนข้อความที่เกินขอบของ <td> */
-    text-overflow: ellipsis; /* แสดงเครื่องหมาย ... เมื่อข้อความเกินขอบ */
-  }
   td {
     vertical-align: top; /* จัดข้อมูลชิดด้านบน */
-  }
-  
- 
+  } 
 </style>
 
 
