--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -6,50 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registerCompany</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  <style>
-    .label-profile {
-      width: 117px;
-      padding-top: 7px;
-      height: 35px;
-      flex-shrink: 0;
-      background: #f6d365;
-      text-align-last: center;
-    }
-
-    .gradient-custom {
-      /* fallback for old browsers */
-      background: #f6d365;
-
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
-
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <%- include('navbar') %>
-
-
     <section style="background-color: #eeeeee;">
       <form action="/company/registercompany" method="post" enctype="multipart/form-data">
 
         <div class="container py-5 h-100">
-          <p class="label-profile"><b>Register</b></p>
+          <p class="label-profile34"><b>Register</b></p>
 
           <div class="row d-flex justify-content-center align-items-center h-100 width-100 ">
             <div class="col col-lg-9 mb-4 mb-xl-0 ">
               <div class="card mb-5" style="border-radius: .5rem;">
                 <div class="row ">
-                  <div class="col-md-3 gradient-custom text-center text-white"
+                  <div class="col-md-3 gradient-custom22 text-center text-white"
                     style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem; display: flex; flex-direction: column; justify-content: center;">
                     <div>
                       <img id="imagePreview" src="/image/default.png" alt="Avatar" class="img-fluid my-5 rounded-circle"
