--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -6,33 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registerUser</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
-  <style>
-    .label-profile {
-      width: 117px;
-      padding-top: 7px;
-      height: 35px;
-      flex-shrink: 0;
-      background: #f6d365;
-      text-align-last: center;
-    }
-
-    .gradient-custom {
-      /* fallback for old browsers */
-      background: #f6d365;
-
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
-
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
-    }
-  </style>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <script>
   var passConfirm = function () {
@@ -75,12 +52,12 @@
                 <form action="/user/registeruser" method="post" enctype="multipart/form-data">
 
                   <div class="container py-5 h-100">
-                    <p class="label-profile"><b>Register</b></p>
+                    <p class="label-profile12"><b>Register</b></p>
                     <div class="row d-flex justify-content-center align-items-center h-100 ">
                       <div class="col col-lg-6 mb-4 mb-lg-0 ">
                         <div class="card mb-3" style="border-radius: .5rem;">
                           <div class="row g-0">
-                            <div class="col-md-5 gradient-custom text-center text-white"
+                            <div class="col-md-5 gradient-custom11 text-center text-white"
                               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem; display: flex; flex-direction: column; justify-content: center;">
                               <div>
                                 <img id="imagePreview" src="/image/default.png" alt="Avatar"
