--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -50,46 +50,17 @@
             <%}%>
 
               <% if(user) { %>
-                <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-                  <div class="container py-5 h-100">
-                    <p class="label-profile"><b>Password</b></p>
-
-                    <div class="row" style="justify-content:center ;">
-
-                      <div class="col-lg-6">
-                        <div class="card  p-5 ">
-                          <div class="card">
-                            <div class="card-body">
-                              <form action="/user/resetpassword/<%= user.email %>" method="post">
-                                <div class="row">
-                                  <div class="col-sm-3">
-                                    <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
-                                  </div>
-                                  <div class="col-sm-9">
-                                    <input type="email" id="email" name="email" class="form-control-input"
-                                      placeholder="Enter Email" required />
-                                  </div>
-                                </div>
-                                <hr>
-                                <button type="submit" class="btn btn-primary">save</button>
-                              </form>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                <div class="outer-container">
+                  <div class="inner-container">
+                    <p style="font-size: 20px;"><strong>เปลี่ยนรหัสผ่าน</strong></p>
+                    <span style="color: #817E7E;">เมื่อคุณกด 'บันทึก' ระบบจะทำการส่ง OTP ไปที่อีเมลคุณ</span>
+                    <form action="/user/resetpassword/<%= user.email %>" method="post">
+                      <input type="email" id="email" class="form-control mt-3" name="email" placeholder="กรอก Email"
+                        required />
+                        <button type="submit" style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+                    </form>
                   </div>
                 </div>
-
-                <!-- <form action="/user/resetpassword/<%= user.email %>" method="post">
-
-          <div class="inputbox-regis">
-            <label for="email">email</label>
-            <input type="email" id="email" name="email" placeholder="Enter Email"/>
-          </div>
-          <button type="submit" class="btn btn-primary">save</button>
-
-        </form> -->
                 <% } else if (company) { %>
                   <div class="outer-container">
                     <div class="inner-container">
@@ -98,19 +69,10 @@
                       <form action="/company/resetpassword/<%= company.email %>" method="post">
                         <input type="email" id="email" class="form-control mt-3" name="email" placeholder="กรอก Email"
                           required />
+                          <button type="submit" style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
                       </form>
-                      <button type="submit" style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
                     </div>
                   </div>
-                  <!-- <form action="/company/resetpassword/<%= company.email %>" method="post">
-
-            <div class="inputbox-regis">
-              <label for="email">email</label>
-              <input type="email" id="email" name="email" placeholder="Enter Email"/>
-            </div>
-            <button type="submit" class="btn btn-primary">save</button>
-  
-          </form> -->
                   <% }else { %>
 
                     <% } %>
