--- a/views/updatejob.ejs
+++ b/views/updatejob.ejs
@@ -7,17 +7,7 @@
     <title>registerUser</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script> -->
-    <style>.label-profile{
-      width: 117px;
-      padding-top: 7px;
-    height: 35px;
-    flex-shrink: 0;     
-    background: #49ebd8;
-    text-align-last: center;
-    }</style>
-    
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   
@@ -25,14 +15,10 @@
 
   <section style="background-color: #eeeeee; ">
     <div class="container py-5 h-100">
-      <p class="label-profile"><b>Edit Job</b></p>
+      <p class="label-profile11"><b>Edit Job</b></p>
     </div>
-
-    
     <form action="/company/updatejob_company/<%= job.idjob_company %>" method="post">
     <div class="row" style="justify-content:center;">
-
-
         <div class="col-lg-6">
           <div class="card p-5">
             <div class="card">
@@ -142,7 +128,6 @@
                     <input type="hidden" id="id_company" name= "id_company"/>
                   </div>
                   <div class="col-sm-9">
-                    <!-- <button type="submit" class="btn btn-outline-primary" data-mdb-ripple-color="dark">Primary</button> -->
                     <button type="submit" class="btn btn-outline-primary"  style="margin-left: 50vh;" data-mdb-ripple-color="dark">Submit</button>
                   </div>
                 </div>
@@ -154,87 +139,6 @@
       </div>
     </form>
   </section>
-
-
-
-
-
-
-<!-- 
-  <form action="/company/updatejob_company/<%= job.idjob_company %>" method="post">
-
-    <div class="inputbox-regis">
-      <input type="text" id="name_job"  name="name_job"  value="<%= job.name_job %>"/>
-      <label for="name_job">name_job</label>
-    </div>
-    <div class="inputbox-regis">
-     
-     <ion-icon name="mail-outline"></ion-icon>
-     <input type="text" id="role" name= "role" value="<%= job.role %>" />
-     <label for="role">role</label>
-      </div>
-
-
-
-
-      <div class="inputbox-regis">
-        <input type="text" id="detail_work"  name="detail_work" value="<%= job.detail_work %>" />
-        <label for="detail_work">detail_work</label>
-      </div>
-      <div class="inputbox-regis">
-       <ion-icon name="mail-outline"></ion-icon>
-       <input type="text" id="experience" name= "experience"value="<%= job.experience %>" />
-       <label for="experience">experience</label>
-        </div>
-
-
-
-        <div class="inputbox-regis">
-          <input type="text" id="gender"  name="gender" value="<%= job.gender %>" />
-          <label for="gender">gender</label>
-        </div>
-        <div class="inputbox-regis">
-         <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="education" name= "education"value="<%= job.education %>" />
-         <label for="education">education</label>
-          </div>
-
-          <div class="inputbox-regis">
-            <input type="text" id="welfare"  name="welfare" value="<%= job.welfare %>" />
-            <label for="welfare">welfare</label>
-          </div>
-        
-          <div class="inputbox-regis">
-            <input type="text" id="salary"  name="salary" value="<%= job.salary %>" />
-            <label for="salary">salary</label>
-          </div>
-          <div class="inputbox-regis">
-           <ion-icon name="mail-outline"></ion-icon>
-           <input type="text" id="workday" name= "workday"value="<%= job.workday %>" />
-           <label for="workday">workday</label>
-            </div>
-  
-            <div class="inputbox-regis">
-              <input type="text" id="day_off"  name="day_off" value="<%= job.day_off %>" />
-              <label for="day_off">day_off</label>
-            </div>
-
-           
-            <div class="inputbox-regis">
-                <ion-icon name="mail-outline"></ion-icon>
-                <input type="datetime-local" id="deadline_offer" name= "deadline_offer"value="<%= job.deadline_offer %>" />
-                <label for="deadline_offer">deadline_offer</label>
-                 </div>
-
-              
-              
-             
-        
-            
-        <button type="submit" class="btn btn-wanning">save</button> 
-    
-      </form> 
-       -->
 </body>
 
 </html>
